tests/ui/typeck/suggest-trait-reexported-as-not-doc-visible.stderr
error[E0599]: no function or associated item named `a` found for struct `Foo` in the current scope
  --> $DIR/suggest-trait-reexported-as-not-doc-visible.rs:9:10
   |
LL |     Foo::a();
   |          ^ function or associated item not found in `Foo`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `TraitA` which provides `a` is implemented but not in scope; perhaps you want to import it
   |
LL + use suggest_trait_reexported_as_not_doc_visible_b::TraitA;
   |
help: there is an associated function `b` with a similar name
   |
LL -     Foo::a();
LL +     Foo::b();
   |

error[E0599]: no function or associated item named `b` found for struct `Foo` in the current scope
  --> $DIR/suggest-trait-reexported-as-not-doc-visible.rs:10:10
   |
LL |     Foo::b();
   |          ^ function or associated item not found in `Foo`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `TraitB` which provides `b` is implemented but not in scope; perhaps you want to import it
   |
LL + use suggest_trait_reexported_as_not_doc_visible_a::TraitB;
   |
help: there is an associated function `a` with a similar name
   |
LL -     Foo::b();
LL +     Foo::a();
   |

error[E0599]: no function or associated item named `c` found for struct `Foo` in the current scope
  --> $DIR/suggest-trait-reexported-as-not-doc-visible.rs:11:10
   |
LL |     Foo::c();
   |          ^ function or associated item not found in `Foo`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `TraitC` which provides `c` is implemented but not in scope; perhaps you want to import it
   |
LL + use suggest_trait_reexported_as_not_doc_visible_a::TraitC;
   |
help: there is an associated function `a` with a similar name
   |
LL -     Foo::c();
LL +     Foo::a();
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0599`.
